Fix clipping with smaller mobile screen widths

--- a/style.css
+++ b/style.css
@@ -269,9 +269,6 @@ nav img,
     }
 
         .primary-title {
-            display: flex;
-            align-items: center;
-
             padding: var(--item-padding);
             border-radius: var(--ui-rad) var(--ui-rad) 0px 0px;
 
@@ -290,7 +287,7 @@ nav img,
         .proj-cards {
             display: grid;
             grid-auto-rows: auto;
-            grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
             gap: 1rem;
 
             padding: 0px var(--item-padding);
